[package]
name = "mibs"
description = "MIBS (MInimal Block Scanner) is a minimal EVM-compatible block scanner written in Rust."
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1.74"
ethers = { version = "2.0.7", features = ["rustls"] }
governor = "0.5.1"
thiserror = "1.0.49"
tokio = { version = "1.23.0" }
tracing = "0.1.36"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "json"] }
