[package]
name = "mibs"
description = "MIBS (MInimal Block Scanner) is a minimal EVM-compatible block scanner written in Rust."
version = "0.10.2"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.74"
backoff = { version = "0.4.0", features = ["tokio"] }
ethers = { version = "2.0.7", features = ["rustls"] }
futures = "0.3.28"
governor = "0.5.1"
jsonrpsee = { version = "0.20.2", features = ["http-client"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
thiserror = "1.0.49"
tokio = { version = "1.23.0" }
tracing = "0.1.36"
tracing-futures = { version = "0.2.5" }
url = "2.4.1"
